--- a/src/components/AddTodoForm/todoform.scss
+++ b/src/components/AddTodoForm/todoform.scss
@@ -1,7 +1,6 @@
 .add-todo-form {
     display: flex;
     justify-content: center;
-    margin-top: 30px;
 }
 
 .todo-form {
@@ -15,6 +14,7 @@
     border-radius: 25px;
     border: 1px solid #c6c6c6;
     height: 25px;
+    padding-left: 10px;
 }
 
 .todo-form-submit {
