--- a/src/components/NavBar/navbar.scss
+++ b/src/components/NavBar/navbar.scss
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
-.navbar-wrapper {}
+.navbar-wrapper {
+    width: 100%;
+}
 
 header {
     background-color: #0174ff;
