--- a/src/components/Table/table.html
+++ b/src/components/Table/table.html
@@ -1,4 +1,5 @@
 <div class="table-wrapper">
+    <todo-form></todo-form>
     <table>
         <tr>
             <th>{{checkboxHeader}}</th>
@@ -10,7 +11,7 @@
         <tr v-for="(todo,index) in todoArray">
             <td><input class="check-box" type="checkbox" v-bind:checked="todo.isDone" @click="checkHandler(index)" /></td>
             <td>{{todo.id}}</td>
-            <td :id="index/1000" contenteditable="true" spellcheck="false" @keypress="labelHandler(index,$event)" @blur="blurHandler(index, $event)">{{todo.description}}</td>
+            <td contenteditable="true" spellcheck="false" @keypress="labelHandler(index,$event)" @blur="blurHandler(index, $event)">{{todo.description}}</td>
             <td><button class="delete-btn" :id="index" @click="deleteHandler(index)">Delete</button></td>
         </tr>
     </table>
