--- a/src/components/Table/table.scss
+++ b/src/components/Table/table.scss
@@ -27,6 +27,7 @@ td {
 th {
     background-color: #0174ff;
     color: white;
+    cursor: default;
 }
 
 th,
@@ -53,4 +54,32 @@ td {
 .check-box {
     height: 20px;
     width: 20px;
+}
+
+.dropdown {
+    border-radius: 3px;
+    position: absolute;
+    width: 150px;
+    display: none;
+    background-color: #014ca8;
+}
+
+.checkbox-header:hover .dropdown {
+    display: block;
+}
+
+.dropdown-item {
+    font-size: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+    height: 30px;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+.dropdown-item:hover {
+    background-color: #0174ff;
 }
