--- a/src/components/AddTodoForm/todoform.scss
+++ b/src/components/AddTodoForm/todoform.scss
@@ -25,8 +25,19 @@
     color: #fff;
     background-color: #0174ff;
     height: 30px;
+    margin-top: 20px;
 }
 
 .todo-form-submit:hover {
     background-color: #014291;
+}
+
+.priority-Tag {
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.radio-input {
+    margin-left: 10px;
 }
