Sort algorithm is fully changed and fixed(?). Multiple sorting is available by both priority and state.

--- a/src/components/AddTodoForm/todoform.html
+++ b/src/components/AddTodoForm/todoform.html
@@ -1,7 +1,7 @@
 <div class="add-todo-form">
     <form class="todo-form" @submit="submitHandler($event)">
         <input ref="formInput" class="todo-input" type="text" required placeholder="Add Todo..."><br>
-        <span class="priority-Tag">Priority :
+        <span class="priority-tag"> <p class="span-name">Priority :</p>
             <input name="priority" class="radio-input" id="low" type="radio" value="Low" @click="radioButtonHandler($event)">
             <label for="low">Low</label>
             <input name="priority" class="radio-input" id="mid" type="radio" value="Mid" @click="radioButtonHandler($event)">
