--- a/src/components/AddTodoForm/todoform.scss
+++ b/src/components/AddTodoForm/todoform.scss
@@ -7,6 +7,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 15px;
 }
 
 .todo-input {
@@ -26,13 +27,14 @@
     background-color: #0174ff;
     height: 30px;
     margin-top: 20px;
+    margin-bottom: 8px;
 }
 
 .todo-form-submit:hover {
     background-color: #014291;
 }
 
-.priority-Tag {
+.priority-tag {
     width: 100%;
     display: flex;
     align-items: center;
@@ -40,4 +42,18 @@
 
 .radio-input {
     margin-left: 10px;
+}
+
+.span-name {
+    margin: 0;
+    padding: 0;
+    background: #0174ff;
+    border-radius: 5px;
+    width: 5em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 25px;
+    color: #fff;
+    cursor: default;
 }
